tests/expectations/parser/structs/comma_separators_fail.out
Error [EPAR0370041]: Each member declaration in a struct or record must be followed by a comma (except the last).
    --> test:4:9
     |
   4 |         y: u8
     |         ^